pfstools 2.0.4 <?>
	* fixed: added installation of octave-based scripts: pfsoctavelum pfsoctavergb pfsstat
	* fixed: libraries installed in lib64 if needed (thanks to Orion for the patch)
	* fixed: added "so" version to the pfs.so library (thanks to Orion for the patch)

pfstools 2.0.3 <28.04.2015>
	* fixed: permission issues in the cmake scripts
	* fixed: Out-of-source compilation issues in octave (thanks to Tomas)
	* added: pfsoutexr has new --float32 option to store color as 32-bit float
	* upated: pfsoutexr assumes --fix-halfmax as default and has additional switch --clamp-halfmax to disable this behavior
	* fixed: pfshdrcalibrate: serious bug that caused Robertson's method to fail most of the time
	* fixed: pfshdrcalibrate: Improved clipping of saturated pixels should avoid most of the artefacts
	* added: jpeg2hdrgen - now the command can use "identify" from ImageMagick instead of "jhead"

pfstools 2.0.2 <08.03.2015>
	* fixed: Fixed build and install scripts for hdrhtml
	* fixed: Fixed building FFT solver for pfstmo_fattal02
	* updated: Added check for libexif
	* updated: improvements in pfstmo_ferradans11 to produce brighter results
	* updated: Updated some manual pages

pfstools 2.0.1 <07.01.2015>
	* added: new tone-mapping operator "pfstmo_ferradans11" (thanks to Sira)

pfstools 2.0.0 <06.12.2014>
	* added: Starting from pfstools 2.0.0, pfstmo and pfscalibration are included in the pfstools source package
	* changed: support for automake dropped in favour of cmake
	* fixed: pfsinpfm and pfsoutpfm now handle both big and little endian files correctly
	* fixed: pfsinpfm and pfsoutpfm do not flip images (top-bottom)
	* added: new tone-mapping operator: pfstmo_mai11
	* changed: Thoroughly updated README files
	* fixed: several issues with octave scripts (compatibility with newer Octave releases), in particular pfs_write_rgb

pfstools 1.9.0 <17.09.2014>
	* added: CMake build system (to replace automake in future releases)